A lot of minor refactors, fixed ArduinoJson library version, restored functionality. Waiting for tests.

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,4 @@ monitor_speed = 115200
 
 build_flags = -std=c++14 -Wall -Wextra -Wpedantic -O2
 
-lib_deps = ArduinoJson, Encoder
+lib_deps = ArduinoJson@5.13.4, Encoder
