Fixed Module template problems and refactored MC33926

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+
+monitor_speed = 115200
+build_flags = -std=c++11 -Wall -Wextra -Wpedantic
+lib_deps = ArduinoJson@6, Encoder
